fixed rank of automaton, fixed mutation
Signed-off-by: Davide Basile <davide.basile@isti.cnr.it>